--- a/BicycleMarketplace/market/src/app/create/create.component.html
+++ b/BicycleMarketplace/market/src/app/create/create.component.html
@@ -10,7 +10,7 @@
                         <button *ngIf="item.progress == 0" type="button" class="button" (click)="item.upload(); upload(item)">UPLOAD</button>
                         <!-- <button *ngIf="item.progress == 100" type="button" class="button" (click)="upload(item)">log</button> -->
                         <span class='alert alert-danger' *ngIf="item.progress != 100">You must upload the image!</span>
-                        <img *ngIf="item.progress == 100" src="{{savedFileName}}">
+                        <img id="uploadedPic" *ngIf="item.progress == 100" src="{{savedFileName}}">
                     </div>
                 </div>
             </div>
