--- a/BicycleMarketplace/market/src/app/create/create.component.html
+++ b/BicycleMarketplace/market/src/app/create/create.component.html
@@ -7,10 +7,10 @@
                     <label for="single">Image Upload</label>
                     <input *ngIf="!bikeImage" type="file" class="form-control" name="single" ng2FileSelect [uploader]="uploader" />
                     <div *ngFor="let item of uploader.queue">
-                        <button *ngIf="item.progress == 0" type="button" class="button" (click)="item.upload(); upload(item)">UPLOAD</button>
+                        <button *ngIf="item.progress == 0" type="button" class="button" (click)="item.upload()">UPLOAD</button>
                         <!-- <button *ngIf="item.progress == 100" type="button" class="button" (click)="upload(item)">log</button> -->
                         <span class='alert alert-danger' *ngIf="item.progress != 100">You must upload the image!</span>
-                        <img id="uploadedPic" *ngIf="item.progress == 100" src="{{savedFileName}}">
+                        <img id="uploadedPic" *ngIf="bikeImage" src="{{savedFileName}}">
                     </div>
                 </div>
             </div>
