--- a/BicycleMarketplace/market/src/app/dashboard/dashboard.component.html
+++ b/BicycleMarketplace/market/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="header">
     <nav>
-        <a [routerLink]="['/dashboard', 'browse']">Browse</a>
+        <a [routerLink]="['/dashboard', 'browse']">Browse Listings</a>
         <div class="verticalLine">
-            <a id="status" [routerLink]="['/dashboard', 'listings']">My Listings</a>
+            <a id="status" [routerLink]="['/dashboard', 'listings']">Create, Update, or Delete a Listings</a>
         </div>
         <div class="verticalLine">
             <a id="status" [routerLink]="['/logoff']">Logoff</a>
