--- a/BicycleMarketplace/market/src/app/app.component.css
+++ b/BicycleMarketplace/market/src/app/app.component.css
@@ -1,3 +1,7 @@
 h1 {
     margin: 20px;
+    margin-bottom: 60px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 90pt;
+    color: rgb(255, 255, 255);
 }
