--- a/BicycleMarketplace/market/src/app/dashboard/browse/browse.component.css
+++ b/BicycleMarketplace/market/src/app/dashboard/browse/browse.component.css
@@ -1,8 +1,13 @@
 .main {
     width: 100%;
+    height: 460px;
     border: 3px solid black;
     padding: 10px;
     background-color: #CCCCCC;
+}
+
+img {
+    width: 53%;
 }
 
 input {
@@ -11,7 +16,7 @@ input {
 }
 
 .listings {
-    height: 475px;
+    height: 363px;
     margin: 20px;
     padding: 20px;
     background-color: white;
@@ -41,6 +46,7 @@ input {
 
 .description {
     margin: 20px;
+    margin-bottom: 0;
     width: 53%;
 }
 
