--- a/BicycleMarketplace/market/src/app/loginreg/loginreg.component.css
+++ b/BicycleMarketplace/market/src/app/loginreg/loginreg.component.css
@@ -2,6 +2,7 @@
 .register {
     margin: 20px;
     margin-right: 10px;
+    margin-left: 30px;
     border: 3px solid black;
     padding: 10px;
     padding-bottom: 20px;
@@ -10,10 +11,17 @@
     border-radius: 10px;
 }
 
+.random {
+    margin-left: 30px;
+}
+
 .login {
     width: 35%;
+    margin-left: 50px;
+    background-color: rgba(240, 248, 255, 0.43);
 }
 
 .register {
-    width: 35%
+    width: 35%;
+    background-color: rgba(240, 248, 255, 0.43);
 }
