--- a/BicycleMarketplace/market/src/app/create/create.component.html
+++ b/BicycleMarketplace/market/src/app/create/create.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="description">
                 <label for="title">Title</label>
-                <input type="text" name="title" [(ngModel)]="bike.title" required #title='ngModel'>
+                <input type="text" name="title" [(ngModel)]="bike.title" required #title='ngModel' placeholder="Listing Title">
                 <span class='alert alert-danger' *ngIf="title.dirty && title.invalid">You must enter in a title!</span>
                 <label for="description">Description</label>
                 <textarea name="description" id="" cols="47" rows="6" [(ngModel)]="bike.description" required maxlength="200" #description='ngModel'></textarea>
